--- a/registro.html
+++ b/registro.html
@@ -1,79 +1,51 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Validación de Formularios</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registro</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="logo">Mi Recetario</div>
-    <form method="get" id="searchForm" action="search-results.html">
-    </form>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="categorias.html">Categorías</a></li>
-        <li><a href="login.html">Iniciar Sesión</a></li>
-        <li><a href="registro.html">Registrarse</a></li>
-      </ul>
-    </nav>
-  </header>
-    <div class="container">
-      <div>>
-          <h2>Formulario de registro</h2>
-          <form method="get"  action="login.html">
-            <div>
-              <label for="fullName">Nombre completo</label>
-              <input
-                type="text"
-                name="fullName"
-                id="fullName"
-              />
-              <div class="fullName"></div>
-            </div>
-            <div>
-              <label for="email">Correo electronico</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-              />
-              <div class="email"></div>
-            </div>
-            <div>
-              <label for="phone">Telefono de contacto</label>
-              <input
-                type="number"
-                name="phone"
-                id="phone"
-              />
-              <div class="phone"></div>
-            </div>
-            <div>
-              <label for="password">Contrasena</label>
-              <input
-                type="password"
-                name="password"
-                id="password"
-              />
-              <div class="password"></div>
-            </div>
-            <div>
-              <label for="rePassword">Repetir Contrasena</label>
-              <input
-                type="password"
-                name="rePassword"
-                id="rePassword"
-              />
-              <div class="rePassword"></div>
-            </div>
-            <button type="submit">ENVIAR</button>
-          </form>
-        </div>
-      </div>
-    </div>
+    <header>
+      <div class="logo">Mi Recetario</div>
+      <form method="get" id="searchForm" action="search-results.html">
+      </form>
+      <nav>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="categorias.html">Categorías</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="registro.html">Registrarse</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="form-container">
+        <h1>Crear Cuenta</h1>
+        <form id="registerForm" method="post" action="login.html">
+          <label for="email">Correo Electrónico</label>
+          <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required />
 
-    <footer><p>Agustin Litvac y Santiago Sanchez Pinedo</p></footer>
-    <script src="./js/formulario.js"></script>
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" name="password" placeholder="Crea una contraseña" required />
+
+          <label for="terms">
+            <input type="checkbox" id="terms" name="terms" required />
+            Acepto los términos y condiciones
+          </label>
+
+          <button type="submit">Registrarse</button>
+        </form>
+        <p>
+          ¿Ya tienes una cuenta?
+          <a href="login.html">Inicia sesión aquí</a>
+        </p>
+      </div>
+    </main>
+    <footer>
+      <p>Agustín Litvac y Santiago Sánchez Pinedo</p>
+    </footer>
+    <script src="js/registro.js"></script>
   </body>
 </html>
